fix(`DisplaySettings`): use `#[cfg(debug_assertions)]` to properly handle conditional field (#666)
As pointed out in https://codeberg.org/mergiraf/mergiraf/pulls/657#issuecomment-9442625, this part of the code doesn't build in release mode: https://codeberg.org/mergiraf/mergiraf/src/commit/9615570b356f84c85d1f1ffe6d85c67852696e69/src/settings.rs#L131-L134

That's because the `conflict_size` field of `ConflictRegexes` is only present when debug assertions are present, and so without them (in particular, in release mode), this assertion doesn't compile. I thought using `debug_assert_eq!` would avoid that, but apparently it expands to
`if cfg!(debug_assertions) { /* assert */ }`
and not
`#[cfg(debug_assertions)] { /* assert */ }`
and apparently that's [expected behaviour](https://github.com/rust-lang/rust/issues/147241#issuecomment-3358571754).

While the fix is pretty trivial (put the `#[cfg]` manually), I was a bit unsure as to how to make sure it doesn't happen in the future. I initially thought of using something like [`cargo-feature-combinations`](https://github.com/romnn/cargo-feature-combinations), but `debug_assertions` isn't actually a feature, but just a compilation option. So I just added a CI step which runs `cargo check` with that option disabled (I checked that it doesn't invalidate Cargo caches). We might want to switch to something more complex in the feature, but this should do for now.

Reviewed-on: https://codeberg.org/mergiraf/mergiraf/pulls/666
Reviewed-by: Antonin Delpeuch <wetneb@noreply.codeberg.org>
Co-authored-by: Ada Alakbarova <ada.alakbarova@proton.me>
Co-committed-by: Ada Alakbarova <ada.alakbarova@proton.me>

--- a/.forgejo/workflows/ci.yml
+++ b/.forgejo/workflows/ci.yml
@@ -31,6 +31,11 @@ jobs:
           key: "${{runner.os}} Rust ${{ steps.get-rust-version.outputs.rust-version }} lock ${{ hashFiles('**/Cargo.lock') }}"
       - name: Format
         run: cargo fmt --all -- --check
+      - name: Check
+        run: cargo check --workspace --all-features --all-targets --locked
+        # For https://codeberg.org/mergiraf/mergiraf/pulls/666
+      - name: Check without debug-assertions
+        run: cargo check --config profile.debug.debug-assertions=false --workspace --all-features --all-targets --locked
       - name: Lint
         run: cargo clippy --workspace --all-features --all-targets --locked -- -Dwarnings
       - name: Run tests
