governance: add abdulkareem to the developers

--- a/members.yml
+++ b/members.yml
@@ -11,3 +11,4 @@ developers: # this corresponds to the "Developers" team: https://codeberg.org/or
   - bobvanderlinden
   - senekor
   - mathstuf
+  - abdulkareem
