chore: update dependencies (#686)
This only updates the lockfile

Reviewed-on: https://codeberg.org/mergiraf/mergiraf/pulls/686
Reviewed-by: Ben Boeckel <mathstuf@noreply.codeberg.org>
Co-authored-by: Ada Alakbarova <ada.alakbarova@proton.me>
Co-committed-by: Ada Alakbarova <ada.alakbarova@proton.me>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -68,6 +68,7 @@ log.workspace = true
 rand.workspace = true
 tree-edit-distance = "0.4"
 etcetera = "0.10"
+# TODO: update to 7.* after https://github.com/zip-rs/zip2/issues/556 is resolved
 zip = { version = "6.0", features = ["deflate"], default-features = false }
 tree-sitter-scala = "0.24"
 either = "1.15"
