--- a/Cargo.toml
+++ b/Cargo.toml
@@ -94,6 +94,7 @@ caplog = "0.3"
 rstest = {version = "0.26", default-features = false}
 tempfile = "3"
 insta = { version = "1.43", default-features = false, features = ["colors"] }
+pretty_assertions = "1.4.1"
 
 [features]
 dev = ["dep:tempfile"]
