ci: warn against uses of `dbg!` (#704)
Those are often remnants of debugging

Reviewed-on: https://codeberg.org/mergiraf/mergiraf/pulls/704
Reviewed-by: Ben Boeckel <mathstuf@noreply.codeberg.org>
Co-authored-by: Ada Alakbarova <ada.alakbarova@proton.me>
Co-committed-by: Ada Alakbarova <ada.alakbarova@proton.me>

--- a/.forgejo/workflows/ci.yml
+++ b/.forgejo/workflows/ci.yml
@@ -37,6 +37,6 @@ jobs:
       - name: Check without debug-assertions
         run: cargo check --config profile.debug.debug-assertions=false --workspace --all-features --all-targets --locked
       - name: Lint
-        run: cargo clippy --workspace --all-features --all-targets --locked -- -Dwarnings
+        run: cargo clippy --workspace --all-features --all-targets --locked -- -Dwarnings -W clippy::dbg_macro
       - name: Run tests
         run: cargo test --workspace --all-features --locked
